# python-project-template

./: .gitignore  .gitlab-ci.yml  HISTORY.md  README.md  pyproject.toml
docs/: .gitignore  conf.py  index.rst
docs/commands/: commands.rst
my_project/: __init__.py  __main__.py  __version__.py
tests/: __init__.py  config.py
